# schematico

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  test.yml
cookbook/: run_discovery.py  run_generation.py
examples/: smoke_run_generation.py  users.json
schematico/: __init__.py  discovery.py  gateway.py  generator.py  helpers.py  logging.py  models.py  prompts.py  providers.py  schema.py  tools.py
schematico/cli/: main.py  progress.py  projects.py  runner.py  wizard.py
schematico/schemas/: helper_schemas.py  llm_provider_schemas.py  tool_schemas.py
schematico/tools/: statistic_tools.py  statistical_tools.py  tavily_tools.py
tests/: test_gateway.py  test_generator.py  test_logging.py  test_projects.py  test_providers.py  test_schema.py
