[project]
name = "schematico"
version = "0.1.0"
description = "Generate realistic synthetic data from a simple JSON schema — library + CLI"
readme = "README.md"
license = { text = "MIT" }
license-files = ["LICENSE"]
authors = [{ name = "Schematico" }]
requires-python = ">=3.11"
keywords = ["synthetic-data", "test-data", "faker", "pydantic-ai", "cli", "data-generation", "schema"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]
dependencies = [
    "faker>=26.0.0",
    "pydantic-ai>=0.4.0",
    "logfire>=3.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "tomli-w>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Sententia-Lab/data-generator"
Repository = "https://github.com/Sententia-Lab/data-generator"
Issues = "https://github.com/Sententia-Lab/data-generator/issues"

[project.scripts]
schematico = "schematico.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["schematico"]

[tool.uv.workspace]
members = ["api"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py311"]
