[project]
name = "schematico"
version = "0.1.0"
description = "Generate realistic synthetic data from a simple JSON schema — library + CLI"
readme = "README.md"
license = { text = "MIT" }
license-files = ["LICENSE"]
authors = [{ name = "Naren Chaudhry", email = "narenchaudhry@gmail.com" }]
requires-python = ">=3.11"
keywords = ["synthetic-data", "test-data", "data-discovery", "web-search", "pydantic-ai", "cli", "data-generation", "schema"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]
dependencies = [
    "pydantic-ai>=0.4.0",
    "logfire>=3.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "tomli-w>=1.0.0",
    "tavily-python>=0.7.26",
]

[project.urls]
Homepage = "https://github.com/Sententia-Lab/schematico"
Repository = "https://github.com/Sententia-Lab/schematico"
Issues = "https://github.com/Sententia-Lab/schematico/issues"

[project.scripts]
schematico = "schematico.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["schematico"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py311"]
